Bug 1840796 - Consider last baseline in the startmost line when computing flex container first baseline. r=dholbert

Likewise, we should also consider first baseline in the endmost line when
computing flex container last baseline.

Fixed the XXX comment by using logical coordinates. This is necessary to pass
flex-align-baseline-flex-004.html because it tests a vertical-rl flex container.

Differential Revision: https://phabricator.services.mozilla.com/D182432